# Ultron

./: .gitignore  .gitmodules  .swiftlint.yml  Jarvis-2.0.dmg  README.md  build-dmg.sh  run-dev.sh
Jarvis/: AppDelegate.swift  Constants.swift  JarvisApp.swift
Jarvis.xcodeproj/: project.pbxproj
JarvisTests/: AgentToolsTests.swift  CommuteServiceTests.swift  RSSParserTests.swift
JarvisWidgetExtension/: ClaudeUsageWidget.swift  CockpitMiniWidget.swift  CommuteWidget.swift  JarvisWidgetExtension.entitlements  JarvisWidgetsBundle.swift  WidgetSnapshotReader.swift
Sidecar/python/: README.md  pyproject.toml
Sidecar/python/skills-samples/: README.md
Sidecar/python/skills-samples/demo/greet-in-danish/: SKILL.md
Sidecar/python/ultron_sidecar/: __init__.py  __main__.py  bridge.py  digest_bridge.py  server.py  skills.py
Ultron/: AppDelegate.swift  Constants.swift  UltronApp.swift
Ultron.xcodeproj/: project.pbxproj
UltronTests/: AgentToolsTests.swift  CommuteServiceTests.swift  ConversationSidebarFilterTests.swift  DocumentReaderTests.swift  GeminiContentDecoderTests.swift  GreetingProviderTests.swift  HotkeyBindingTests.swift  MetricsServiceHistogramTests.swift  ModeCodableTests.swift  RSSParserTests.swift  WeatherCodeTests.swift
UltronWidgetExtension/: ClaudeUsageWidget.swift  CockpitMiniWidget.swift  CommuteWidget.swift  UltronWidgetExtension.entitlements  UltronWidgetsBundle.swift  WidgetSnapshotReader.swift
docs/: solution-overview.md  v5-roadmap.md  widgets-setup.md
scripts/: dev-sidecar.sh  generate-icon.swift  notarize.sh  test-sidecar.sh
(+216 files in other folders)
