[project]
name = "ultron-sidecar"
version = "0.1.0"
description = "Ultron's Python sidecar — MCP server bridging OpenJarvis skills and connectors to the native Swift shell"
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "mcp>=1.0.0",
    "openjarvis",
]

[project.scripts]
ultron-sidecar = "ultron_sidecar.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ultron_sidecar"]

[tool.uv.sources]
openjarvis = { path = "../../ThirdParty/openjarvis", editable = true }
